# client

./: .gitignore  Cargo.toml  README.md  README.rst  build.sbt  build.sc  elm-package.json  index.html  main.js  mix.exs  package-lock.json  package.json  ports.js  requirements.txt  setup.py  test-requirements.txt
.circleci/: config.yml
channel/: __main__.py  api.py
channel/media/: __init__.py  play_queue.py  player.py  song.py
channel/media/stream/: __init__.py  common.py  gstreamer.py
channel/src/kalouantonis/channel/: Application.scala
channel/src/kalouantonis/channel/media/: Decoder.scala
channel/src/kalouantonis/channel/media/decoder/: Decoder.scala  MP3Decoder.scala
channel/test/kalouantonis/channel/: PlayQueueTest.scala
channel/tests/media/: test_play_queue.py
channel/ui/: __init__.py
channel/ui/unix/: application.py  helpers.py  song_list_view.py  threading.py
channel/ui/unix/components/: player_action_bar.py
config/: config.exs
data/ui/: player_action_bar.ui
lib/channel/: api.ex  application.ex  track_storage.ex  ui.ex
lib/channel/media/: play_queue.ex  player.ex
lib/channel/ui/: server.ex
project/: Dependencies.scala
src/: Main.elm  api.rs  main.rs  wx_const.erl
src/Media/: Audio.elm  PlayQueue.elm  Player.elm
src/main/scala/com/kalouantonis/channel/: Application.scala  ChannelApp.scala  Elm.scala  FileUtil.scala
src/main/scala/com/kalouantonis/channel/concurrent/: Channel.scala
src/media/: mod.rs  play_queue.rs
src/test/scala/com/kalouantonis/channel/: PlayQueueTest.scala
src/ui/: mod.rs
test/: channel_test.exs
(+5 files in other folders)
