[package]
name = "channel"
version = "0.1.0"
authors = ["Antonis Kalou <kalouantonis@protonmail.com>"]

[dependencies]
# Utils
rand = "0.3"
# Logging
log = "0.3"
simple_logger = "0.3"
# GTK
glib = "0.4.0"
gio = "0.3.0"
gstreamer = "0.9.1"
# JSON
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# HTTP
reqwest = "0.8.1"

[dependencies.gtk]
version = "0.3.0"
features = ["v3_10"]